<?xml version="1.0"?>
<package format="2">
  <name>ros_mscl_cpp_example</name>
  <version>1.1.3</version>
  <description>Example listener for Parker LORD Sensing inertial device driver ros_mscl (C++).</description>
  <maintainer email="melissa_gill@lord.com">mgill</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/LORD-MicroStrain/ROS-MSCL</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
